@@ -1,6 +1,7 @@
 Revision history for Crypt-Passphrase
 
 {{$NEXT}}
+          - Better encode salts in System encoder
 
 0.015     2023-04-04 15:54:56+02:00 Europe/Amsterdam
           - Fix compilation issue on perls < 5.22.0
